# sudoku-solver

./: CMakeLists.txt  LICENSE  README.md
include/: meta.hpp  solver.h
src/: main.cpp
test/: CMakeLists.txt  test_candidates.cpp
